[gd_scene load_steps=46 format=3 uid="uid://bbkxxgf653w77"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_jxyb5"]
[ext_resource type="Texture2D" uid="uid://dj2h8o7w8g4h7" path="res://assets/sprites/player.png" id="2_omubx"]
[ext_resource type="FontFile" uid="uid://b24t7afsssog7" path="res://assets/fonts/PixelOperator8.ttf" id="3_p14ow"]
[ext_resource type="Script" path="res://scripts/FSM/finite_state_machine.gd" id="4_4gycm"]
[ext_resource type="Script" path="res://scripts/FSM/player/movement/idle.gd" id="5_q6jhb"]
[ext_resource type="Script" path="res://scripts/FSM/player/pause.gd" id="5_wg8uu"]
[ext_resource type="Script" path="res://scripts/FSM/player/movement/run.gd" id="6_1esyb"]
[ext_resource type="Script" path="res://scripts/FSM/player/movement/jump.gd" id="7_lf37l"]
[ext_resource type="Script" path="res://scripts/FSM/player/movement/dash.gd" id="8_m0hff"]
[ext_resource type="Script" path="res://scripts/FSM/player/movement/jump_peak.gd" id="9_o5hl1"]
[ext_resource type="Script" path="res://scripts/FSM/player/movement/fall.gd" id="10_4awil"]
[ext_resource type="Script" path="res://scripts/FSM/player/attack/attack.gd" id="12_s0gdy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mi2oh"]
size = Vector2(16, 15)

[sub_resource type="Animation" id="Animation_7holx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_mi2oh")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -7.5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -8)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b3as7"]
size = Vector2(16, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0oo81"]
size = Vector2(16, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_evefx"]
size = Vector2(16, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a0yd7"]
size = Vector2(16, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bowu7"]
size = Vector2(16, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mdfp4"]
size = Vector2(16, 15)

[sub_resource type="Animation" id="Animation_2r00t"]
resource_name = "dash"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2i(0, 7), Vector2i(7, 7), Vector2i(0, 7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [SubResource("RectangleShape2D_mi2oh"), SubResource("RectangleShape2D_b3as7"), SubResource("RectangleShape2D_0oo81"), SubResource("RectangleShape2D_evefx"), SubResource("RectangleShape2D_a0yd7"), SubResource("RectangleShape2D_bowu7"), SubResource("RectangleShape2D_mdfp4")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -7.5), Vector2(0, -6.5), Vector2(0, -4.5), Vector2(0, -4), Vector2(0, -3), Vector2(0, -2.5), Vector2(0, -7.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, -8)]
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_smrg2"]
size = Vector2(16, 12)

[sub_resource type="Animation" id="Animation_g1v7m"]
resource_name = "fall"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_smrg2")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, -6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, -4)]
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1chs"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q2foo"]
size = Vector2(12, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oxsv5"]
size = Vector2(14, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c41ur"]
size = Vector2(12, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rtanb"]
size = Vector2(14, 16)

[sub_resource type="Animation" id="Animation_nghf5"]
resource_name = "hit"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2i(0, 6), Vector2i(4, 6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [SubResource("RectangleShape2D_b1chs"), SubResource("RectangleShape2D_q2foo"), SubResource("RectangleShape2D_q2foo"), SubResource("RectangleShape2D_oxsv5"), SubResource("RectangleShape2D_c41ur"), SubResource("RectangleShape2D_c41ur"), SubResource("RectangleShape2D_rtanb")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -8), Vector2(0, -8), Vector2(0, -8), Vector2(0, -8), Vector2(0, -8), Vector2(0, -8), Vector2(0, -8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, -8)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5x2ug"]
size = Vector2(16, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gx6k5"]
size = Vector2(14, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6bue7"]
size = Vector2(14, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nclar"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_ox2qt"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [SubResource("RectangleShape2D_b1chs"), SubResource("RectangleShape2D_5x2ug"), SubResource("RectangleShape2D_5x2ug"), SubResource("RectangleShape2D_gx6k5"), SubResource("RectangleShape2D_6bue7"), SubResource("RectangleShape2D_6bue7"), SubResource("RectangleShape2D_nclar")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -8), Vector2(0, -7.5), Vector2(0, -7.5), Vector2(0, -7.5), Vector2(0, -8), Vector2(0, -8), Vector2(0, -8)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, -8)]
}

[sub_resource type="Animation" id="Animation_l4ef5"]
resource_name = "jump"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_smrg2")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, -6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, -4)]
}

[sub_resource type="Animation" id="Animation_atnvw"]
resource_name = "jumpPeak"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_smrg2")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, -6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, -4)]
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4j4e4"]
size = Vector2(15, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k3sor"]
size = Vector2(15, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nabjf"]
size = Vector2(16, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8nui"]
size = Vector2(16, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eobw2"]
size = Vector2(16, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hgqj2"]
size = Vector2(15, 11)

[sub_resource type="Animation" id="Animation_tx80o"]
resource_name = "run"
length = 0.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [20, 25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [SubResource("RectangleShape2D_4j4e4"), SubResource("RectangleShape2D_k3sor"), SubResource("RectangleShape2D_nabjf"), SubResource("RectangleShape2D_s8nui"), SubResource("RectangleShape2D_eobw2"), SubResource("RectangleShape2D_hgqj2")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0.5, -5.5), Vector2(0.5, -5), Vector2(0, -5), Vector2(-3.57628e-07, -4.5), Vector2(-2.38419e-07, -5), Vector2(0.5, -5.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, -8)]
}

[sub_resource type="Animation" id="Animation_i5xcu"]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [40]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lxb5t"]
_data = {
"RESET": SubResource("Animation_7holx"),
"attack": SubResource("Animation_i5xcu"),
"dash": SubResource("Animation_2r00t"),
"fall": SubResource("Animation_g1v7m"),
"hit": SubResource("Animation_nghf5"),
"idle": SubResource("Animation_ox2qt"),
"jump": SubResource("Animation_l4ef5"),
"jumpPeak": SubResource("Animation_atnvw"),
"run": SubResource("Animation_tx80o")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 5
collision_layer = 3
script = ExtResource("1_jxyb5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_omubx")
hframes = 10
vframes = 10
frame = 40

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lxb5t")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_mi2oh")

[node name="debug" type="Label" parent="."]
offset_left = -13.0
offset_top = -28.0
offset_right = 13.0
offset_bottom = -18.0
theme_override_fonts/font = ExtResource("3_p14ow")
theme_override_font_sizes/font_size = 8
text = "Debug"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("4_4gycm")

[node name="Pause" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("5_wg8uu")

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("5_q6jhb")

[node name="Run" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("6_1esyb")

[node name="Jump" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("7_lf37l")

[node name="JumpPeak" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("9_o5hl1")

[node name="Fall" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("10_4awil")

[node name="Dash" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("8_m0hff")

[node name="DashCooldown" type="Timer" parent="FiniteStateMachine/Dash"]
wait_time = 0.533
one_shot = true

[node name="Attack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("12_s0gdy")

[node name="FirstAttackCooldown" type="Timer" parent="FiniteStateMachine/Attack"]

[connection signal="timeout" from="FiniteStateMachine/Dash/DashCooldown" to="FiniteStateMachine/Dash" method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="FiniteStateMachine/Attack/FirstAttackCooldown" to="FiniteStateMachine/Attack" method="_on_first_attack_cooldown_timeout"]
